# kanari

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: ci.yml
sql/: init-mysql.sql  init-postgres.sql  init.sql
static/: style.css
templates/: error.html  index.html
tests/: test_app.py
